--- a/doo.css
+++ b/doo.css
@@ -118,6 +118,27 @@ h4, .panel-heading {
 .autocomplete-suggestions strong { font-weight: normal; color: #3399FF; }
 /*Autocomplete*/
 
+.iframe-wrap {
+    position:fixed;
+    left:0px;
+    top:51px;
+    width:100%;
+    height:calc(100% - 51px);   
+}
+
+.iframe-wrap iframe {
+    background-color: transparent;
+    border: 0px none transparent;
+    padding: 0px;
+    display: block;
+    width:100%;
+    height:100%;   
+}
+
+.a-sem-link {
+    cursor:default !important;   
+}
+
 @media (min-width: 1900px) {
   #pn-add {
     display: block!important;
