--- a/doo.css
+++ b/doo.css
@@ -68,6 +68,18 @@ h4, .panel-heading {
     box-shadow: 1px 1px 12px;
 }
 
+.small-profile-pic {
+    width:30px;
+    height:30px;
+}
+
+.profile-pic-corner {
+    float:left;
+    position: relative;
+    top: -5px;
+    left: -7px;
+}
+
 .btn-feito {
     width: 36px;
     height: 36px;
@@ -109,6 +121,10 @@ h4, .panel-heading {
 
 .quadrinho {
     box-shadow: 4px 4px 4px rgba(0,0,0,0.3);
+}
+
+.quadrinho img {
+    cursor:default;
 }
 
 /*Autocomplete*/
